--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,8 @@
     "typing_extensions==4.15.0",
     "tzdata==2025.2",
     "urllib3==2.5.0",
-    "zstandard==0.25.0"
+    "zstandard==0.25.0",
+    "notebook (>=7.4.7,<8.0.0)"
   ]
 
 [tool.poetry.group.dev.dependencies]
